--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,12 @@
   
 }
 .Blender {
- 
+    text-shadow: 1px 1px 3px rgba(0,0,0,1),-1px -1px 3px rgba(0,0,0,1);
     background-color: rgb(207, 98, 61);
+}
+
+.Python {
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,1),-1px -1px 3px rgba(0,0,0,1);
+    background: linear-gradient(0deg, rgb(240, 202, 32), rgb(30, 140, 243))
 }
